--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">The White Owl</string>
-    <string name="announcemnt_string">This is where a daily announcement would appear</string>
+    <string name="announcemnt_string"></string>
     <string name="specials_button_string">Daily Specials</string>
     <string name="menu_button_string">Menu</string>
     <string name="beer_menu_button_string">Beers On Tap</string>
